fix z-index

--- a/src/components/modal.scss
+++ b/src/components/modal.scss
@@ -5,7 +5,7 @@
     left: 0;
     right: 0;
     overflow: auto;
-    z-index: 1;
+    z-index: 2;
 
     &:not(.open) {
         display: none;
